<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nowPlaying"
    android:orientation="vertical"
    android:padding="@dimen/paddingActivities">


    <TextView
        android:id="@+id/mainMenuButton"
        style="@style/mainMenuButton"
        android:layout_weight="1"
        android:text="@string/main_menu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/paddingPlayer"
        android:layout_marginTop="@dimen/paddingPlayer"
        android:background="@color/nowPlayingAlt"
        android:paddingBottom="@dimen/paddingPlayer"
        android:paddingTop="@dimen/paddingPlayer">

        <TextView
            android:id="@+id/nowPlayingText"
            style="@style/nowPlayer"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/now_playing"
            android:textSize="25sp" />

        <HorizontalScrollView
            android:id="@+id/tracknalbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nowPlayingText">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/nowPlayingTrack"
                    style="@style/nowPlayer1"
                    tools:text="Track" />

                <TextView
                    android:id="@+id/nowPlayinalbum"
                    style="@style/nowPlayer1"
                    tools:text="Album" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/artist"
            style="@style/nowPlayer1"
            android:layout_below="@id/tracknalbum"
            tools:text="Artist" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/artist"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                style="@style/nowplayingbuttons"
                android:src="@drawable/ic_action_playback_prev" />

            <ImageButton
                style="@style/nowplayingbuttons"
                android:src="@drawable/ic_action_playback_pause" />

            <ImageButton
                style="@style/nowplayingbuttons"
                android:src="@drawable/ic_action_playback_play" />

            <ImageButton
                style="@style/nowplayingbuttons"
                android:src="@drawable/ic_action_playback_next" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/playlist"
        android:textColor="@color/nowPlayingAlt"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1000"
        android:padding="@dimen/paddingScrollView"
        tools:context="com.example.android.notecollector.NowPlayingActivity" />

</LinearLayout>